# rust-value-ext

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.devai/: config.toml
.devai/custom/agent/: update-readme.devai
doc/for-llm/: api-reference-for-llm.md
docs/for-llm/: api-reference-for-llm.md  doc-for-llm.md
src/: json.rs  lib.rs
src/json/: as_type.rs  as_type_num.rs  as_type_str.rs  as_type_vec.rs  json_value_ext.rs  mod.rs
tests/: tests-json.rs
