[package]
name = "value-ext"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Serde Json Value Extension Trait and Json Utilities"
homepage = "https://github.com/jeremychone/rust-value-ext"
repository = "https://github.com/jeremychone/rust-value-ext"
categories = ["data-structures"]
keywords = [
	"serde-json",
	"value",
	"utilities"
]

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Json
serde = { version   = "1", features = ["derive"] } # Opted to rc for Arc<T> serialization
serde_json = "1"
# -- Others
derive_more = {version = "2", features = ["from"] }